--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,12 +1,4 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 @import "body";
-@import "header_main";
+@import "todo";
 @import "footer";
-
-
-
