--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,320 +1,12 @@
-
 @import "body";
-@import "todo";
+@import "header";
+@import "main";
 @import "footer";
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  $colorbody:#221f21;
-  $navlink:#e42e89;
-  $navbar:#4d0b65;
-  
-  
-  body {
-    background-color: $colorbody;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;
-    width: auto;
-  }
-  
-  html {
-    height: 100%;
-    width: auto;
-  }
 
-  /*header sass*/
 
-.header {
-    .animado {
-      background-color: rgb 208, 189, 225;
-      height: 30px;
-      width: 13rem;
-      text-align: center;
-      font-family: "Anton", sans-serif;
-    }
-    .animado {
-      animation-duration: 3s;
-      animation-name: aparecer;
-      animation-iteration-count: infinite;
-    }
-    @keyframes aparecer {
-      0% {
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-        color: aqua;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-    img {
-      width: 100px;
-      border-radius: 50%;
-    }
-    .a {
-      color: blue;
-      &:hover {
-        color: aqua;
-      }
-    }
-    .navbar {
-      background-color:$navbar;
-      padding: 20px;
-    }
-    .navbar-nav {
-      font-size: 1rem;
-      font-weight: 900;
-      gap: 25px;
-      margin-bottom: 15px;
-      margin-top: 25px;
-      color: aqua;
-    }
-    .nav-link {
-      color: aqua;
-    }
-    .nav-link {
-      color: aqua;
-      &:hover {
-        color:$navlink;
-        transition: 0.5s;
-      }
-    }
-  }
   
-  /*Fin header*/
-  
-  /*Entre header y main Bievenidos*/
-  .ani {
-    color: white;
-    text-align: center;
-    font-weight: 300;
-    font-family: "Rubik Burned", cursive;
-  }
-  .ani {
-    animation-duration: 3s;
-    animation-name: aparecer;
-    animation-iteration-count: infinite;
-  }
-  
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 1;
-      color: aqua;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
-  
-  /*Fin Entre header y main Bievenidos*/
-  
-  /*Inicio main*/
-  main {
-    .texto {
-      display: flex;
-      background-color: #4d0b65;
-      color: aqua;
-      text-align: center;
-      font-family: "Anton", sans-serif;
-    }
-    .card {
-      background-color: #4d0b65;
-    }
-    .row {
-      gap: 70px;
-      justify-content: center;
-      color: aqua;
-      font-family: "Anton", sans-serif;
-    }
-    .anima {
-      color: black;
-      text-align: center;
-      font-weight: 500;
-      font-family: "Rubik Burned", cursive;
-    }
-  
-    .anima {
-      animation-duration: 5s;
-      animation-name: aparecer;
-      animation-iteration-count: infinite;
-    }
-  
-    @keyframes aparecer {
-      0% {
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-        color: aqua;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-    .card_ {
-      background-color: white;
-    }
-    .row_ {
-      gap: 20px;
-      justify-content: center;
-      color: black;
-      font-family: "Anton", sans-serif;
-    }
-  
-    .card_ {
-      background-color: white;
-    }
-    .img-fluid {
-      background-color: white;
-      transition: 1s;
-      animation-name: galeria;
-      animation-duration: 2s;
-      animation-iteration-count: inherit;
-    }
-  
-    @keyframes galeria {
-      0% {
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-        color: white;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-    img {
-      width: 500px;
-      padding: 5px;
-      margin: 1rem;
-      background-position: center;
-      border-radius: 50px;
-    }
-    main .img_ {
-      width: 500px;
-      padding: 5px;
-      margin: 1rem;
-      background-position: center;
-      border-radius: 1px;
-    }
-    img {
-      color: black;
-      &:hover {
-        background-color: aqua;
-      }
-    }
-    .col {
-      color: aqua;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-  }
+ 
   
 
-  /*fin main*/
-  
-  /*pages contacto main*/
-  #contacto h3 {
-    color: aqua;
-    text-align: center;
-  }
-  
-  #contacto .form-label {
-    padding: 1px;
-    color: aqua;
-  }
-  
-  #contacto .mb-3 {
-    margin-left: 80px;
-    margin-right: 80px;
-  }
-  
-
- /*Inicio footer*/
-
-footer {
-    display: flex;
-    background-color: #4d0b65;
-    width: 100%;
-    text-align: center;
-    align-items: center;
-    .contenedor {
-      display: flex;
-      width: 100%;
-      height: 100%;
-    }
-    .texto {
-      font-family: Arial, Helvetica, sans-serif;
-      text-align: left;
-      font-size: 1rem;
-      font-weight: 10;
-      color: aqua;
-      margin-top: 20px;
-      margin-left: 1px;
-      margin-bottom: 1px;
-      padding-left: 10px;
-    }
-    img {
-      width: 40px;
-      margin-top: 10px;
-      margin-left: 10px;
-      margin-right: 10px;
-      margin-bottom: 1px;
-      border-radius: 50px;
-      padding: 1px;
-      list-style: none;
-    }
-    .redes {
-      display: flex;
-      align-items: center;
-      margin-left: auto;
-      padding-right: 30px;
-      list-style: none;
-      margin-top: 2px;
-      margin-bottom: 10px;
-    }
-    .anim {
-      display: flex;
-      width: 30%;
-      padding: 1rem;
-      color: aqua;
-    }
-    .anim {
-      animation-duration: 5s;
-      animation-name: aparecer;
-      animation-iteration-count: infinite;
-    }
-    @keyframes aparecer {
-      0% {
-        opacity: 0;
-      }
-      50% {
-        opacity: 1;
-        color: aqua;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-    .ms-3 {
-      color: white;
-      &:hover {
-        color: aqua;
-        transition: all 0.5s;
-        opacity: 30%;
-      }
-    }
-  }
-  
-  /*Fin footer*/
-   
+ 
